--- a/typst.toml
+++ b/typst.toml
@@ -1,11 +1,11 @@
 [package]
-name = "supercharged-dhbw"
+name = "supercharged-dhbw-integraluminium"
 version = "3.4.1"
 entrypoint = "lib.typ"
 authors = ["Danny Seidel <@DannySeidel>"]
 license = "MIT"
 description = "Unofficial Template for DHBW"
-repository = "https://github.com/DannySeidel/typst-dhbw-template"
+repository = "https://github.com/Integraluminium/supercharged-typst-template"
 keywords = ["dhbw", "thesis"]
 categories = ["paper", "thesis", "report"]
 exclude = ["examples/**", "CHANGELOG.md"]
